ee/app/assets/stylesheets/pages/epics.scss
.epic-sidebar {
  .block.date {
    .help-icon,
    .date-warning-icon {
      &:hover {
        cursor: pointer;
      }
    }

    .help-icon {
      color: $gl-text-color-secondary;
    }

    .btn-sidebar-action {
      line-height: $gl-font-size;
    }

    .btn-sidebar-date-remove {
      height: $gl-font-size;
      line-height: $gl-btn-horz-padding;
    }

    .date-warning-icon {
      color: $orange-500;
      margin-top: -1px;
    }

    .value-type-fixed,
    .value-type-dynamic {
      color: $gl-text-color-secondary;

      .value-content {
        margin-left: 2px;
      }

      &.is-option-selected {
        > span {
          color: $gl-text-color;
          font-weight: $gl-font-weight-bold;
        }
      }
    }
  }
}

.epic-tabs-content {
  .roadmap-container {
    min-height: 600px;

    .roadmap-shell {
      border: 1px solid $white-dark;
      border-top: 0;
    }

    .empty-state {
      margin-top: 0;
    }
  }
}

@include media-breakpoint-down(xs) {
  .epic-page-container {
    .detail-page-header {
      display: flex;
    }

    .detail-page-header-actions {
      width: auto;
      margin-top: 0;
    }
  }
}

.tooltip .tooltip-inner .milestone-date-range {
  color: $gl-text-color-tertiary;
}

